--- a/contattaci.html
+++ b/contattaci.html
@@ -5,28 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traslochi Veloci - Contattaci</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="animations.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <nav>
             <div class="logo">Traslochi Veloci</div>
-            <ul>
+            <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#servizi">Servizi</a></li>
                 <li><a href="index.html#chi-siamo">Chi Siamo</a></li>
                 <li><a href="index.html#testimonianze">Testimonianze</a></li>
             </ul>
-            <a href="#contatto" class="cta-button">Richiedi Preventivo</a>
+            <a href="#contatto" class="cta-button desktop-cta">Richiedi Preventivo</a>
+            <div class="mobile-menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
 
     <!-- Contact Section -->
-    <section id="contatto" data-aos="fade-up" style="padding-top: 8rem;">
+    <section id="contatto" class="fade-up" style="padding-top: 8rem;">
         <h2>Mettiamoci in Contatto</h2>
         <div class="contact-container">
-            <div class="contact-form" data-aos="slide-right">
+            <div class="contact-form slide-in-left">
                 <h3>Inviaci un Messaggio</h3>
                 <form id="contactForm">
                     <div class="form-group">
@@ -48,7 +53,7 @@
                     <button type="submit" class="cta-button">Invia Richiesta</button>
                 </form>
             </div>
-            <div class="contact-info" data-aos="slide-left">
+            <div class="contact-info slide-in-right">
                 <h3>Informazioni di Contatto</h3>
                 <div class="info-item">
                     <strong>Telefono:</strong> 02 1234 5678
@@ -62,7 +67,7 @@
                 <div class="info-item">
                     <strong>Indirizzo:</strong> Via Esempio 123, 20100 Milano, Italia
                 </div>
-                <div class="map-container" data-aos="zoom-in">
+                <div class="map-container zoom-in">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2796.1234567890123!2d9.123456789012345!3d45.12345678901234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDXCsDA3JzM0LjQiTiA5wrAwNyc0NC40IkU!5e0!3m2!1sen!2sit!4v1620000000000!5m2!1sen!2sit" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
@@ -82,9 +87,5 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
 </body>
 </html>
