--- a/index.html
+++ b/index.html
@@ -5,50 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traslochi Veloci - Homepage</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="animations.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <nav>
             <div class="logo">Traslochi Veloci</div>
-            <ul>
+            <ul class="nav-menu">
                 <li><a href="#servizi">Servizi</a></li>
                 <li><a href="#chi-siamo">Chi Siamo</a></li>
                 <li><a href="#testimonianze">Testimonianze</a></li>
                 <li><a href="contattaci.html">Contattaci</a></li>
             </ul>
-            <a href="contattaci.html" class="cta-button">Richiedi Preventivo</a>
+            <a href="contattaci.html" class="cta-button desktop-cta">Richiedi Preventivo</a>
+            <div class="mobile-menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
 
     <!-- Hero Section -->
-    <section id="hero" data-aos="fade-in">
+    <section id="hero" class="fade-in">
         <div class="hero-content">
             <h1>Il Tuo Trasloco in Mani Esperte</h1>
             <p>Con cura, professionalità e attenzione per i tuoi ricordi più preziosi.</p>
             <a href="contattaci.html" class="cta-button">Inizia Ora</a>
         </div>
-        <div class="hero-image" data-aos="zoom-in">
+        <div class="hero-image zoom-in">
             <img src="Immagine_Hero.jpg" alt="Traslochi Veloci - Il tuo trasloco in mani esperte">
         </div>
     </section>
 
     <!-- Servizi -->
-    <section id="servizi" data-aos="fade-up">
+    <section id="servizi" class="fade-up">
         <h2>I Nostri Servizi</h2>
         <div class="services-grid">
-            <div class="service-card" data-aos="flip-left">
+            <div class="service-card slide-in-left">
                 <div class="service-icon">🏠</div>
                 <h3>Traslochi Residenziali</h3>
                 <p>Spostiamo le tue cose con la massima cura, come se fossero nostre.</p>
             </div>
-            <div class="service-card" data-aos="flip-left" data-aos-delay="100">
+            <div class="service-card slide-in-left delay-100">
                 <div class="service-icon">🏢</div>
                 <h3>Traslochi Uffici</h3>
                 <p>Minimo disordine, massimo rispetto per il tuo lavoro.</p>
             </div>
-            <div class="service-card" data-aos="flip-left" data-aos-delay="200">
+            <div class="service-card slide-in-left delay-200">
                 <div class="service-icon">🔧</div>
                 <h3>Montaggio Mobili</h3>
                 <p>Assembliamo tutto con precisione, pronti all'uso.</p>
@@ -57,42 +62,42 @@
     </section>
 
     <!-- Chi Siamo -->
-    <section id="chi-siamo" data-aos="fade-up">
+    <section id="chi-siamo" class="fade-up">
         <h2>Chi Siamo</h2>
         <div class="about-content">
-            <div class="about-text">
+            <div class="about-text slide-in-left">
                 <p>Da oltre 10 anni, Traslochi Veloci trasforma i traslochi in esperienze positive. Il nostro team di esperti sa quanto sia importante per te avere accanto persone di fiducia che trattano i tuoi beni con cura e rispetto.</p>
                 <p>La nostra missione è rendere ogni trasloco un nuovo inizio sereno.</p>
             </div>
-            <div class="about-image" data-aos="zoom-in">
+            <div class="about-image zoom-in">
                 <img src="Chi_Siamo.jpg" alt="Il nostro team di esperti traslocatori">
             </div>
         </div>
     </section>
 
     <!-- Perché Sceglierci -->
-    <section id="perche-sceglierci" data-aos="fade-up">
+    <section id="perche-sceglierci" class="fade-up">
         <h2>Perché Sceglierci</h2>
         <ul>
-            <li data-aos="slide-right">Esperienza decennale nel settore</li>
-            <li data-aos="slide-right" data-aos-delay="100">Personale qualificato e affidabile</li>
-            <li data-aos="slide-right" data-aos-delay="200">Cura dei dettagli per ogni oggetto</li>
-            <li data-aos="slide-right" data-aos-delay="300">Prezzi trasparenti e competitivi</li>
+            <li class="slide-in-right">Esperienza decennale nel settore</li>
+            <li class="slide-in-right delay-100">Personale qualificato e affidabile</li>
+            <li class="slide-in-right delay-200">Cura dei dettagli per ogni oggetto</li>
+            <li class="slide-in-right delay-300">Prezzi trasparenti e competitivi</li>
         </ul>
     </section>
 
     <!-- Testimonianze -->
-    <section id="testimonianze" data-aos="fade-up">
+    <section id="testimonianze" class="fade-up">
         <h2>Cosa Dicono i Nostri Clienti</h2>
         <div class="testimonials">
-            <div class="testimonial" data-aos="flip-up">
+            <div class="testimonial scale-in">
                 <div class="testimonial-avatar">
                     <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=80&h=80&fit=crop&crop=face&auto=format" alt="Maria R.">
                 </div>
                 <blockquote>"Traslochi Veloci ha reso il nostro trasloco meno stressante. Tutto è arrivato integro e in tempo!"</blockquote>
                 <cite>- Maria R., Milano</cite>
             </div>
-            <div class="testimonial" data-aos="flip-up" data-aos-delay="100">
+            <div class="testimonial scale-in delay-100">
                 <div class="testimonial-avatar">
                     <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=80&h=80&fit=crop&crop=face&auto=format" alt="Luca B.">
                 </div>
@@ -115,9 +120,5 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
 </body>
 </html>
