--- a/contattaci.html
+++ b/contattaci.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traslochi Veloci - Contattaci</title>
+    <title>Contattaci - Traslochi Veloci Milano</title>
+    <meta name="description" content="Contatta Traslochi Veloci Milano per servizi di trasloco in Lombardia. Richiedi un preventivo gratuito per traslochi residenziali e aziendali.">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animations.css">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MovingCompany",
+      "name": "Traslochi Veloci Milano",
+      "description": "Contatta Traslochi Veloci Milano per servizi di trasloco in Lombardia. Richiedi un preventivo gratuito per traslochi residenziali e aziendali.",
+      "url": "https://traslochiveloci.it/contattaci.html",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://traslochiveloci.it/contattaci.html"
+      },
+      "telephone": "+390212345678",
+      "email": "info@traslochiveloci.it",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Via Esempio 123",
+        "addressLocality": "Milano",
+        "postalCode": "20100",
+        "addressRegion": "MI",
+        "addressCountry": "IT"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "45.4642",
+        "longitude": "9.1900"
+      },
+      "openingHours": "Mo-Fr 08:00-18:00, Sa 08:00-12:00",
+      "serviceArea": {
+        "@type": "Place",
+        "name": "Milano e Lombardia"
+      },
+      "priceRange": "€€"
+    }
+    </script>
 </head>
 <body>
     <!-- Header -->
@@ -14,7 +49,7 @@
             <div class="logo">Traslochi Veloci</div>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#servizi">Servizi</a></li>
+                <li><a href="servizi.html">Servizi</a></li>
                 <li><a href="index.html#chi-siamo">Chi Siamo</a></li>
                 <li><a href="index.html#testimonianze">Testimonianze</a></li>
             </ul>
@@ -29,7 +64,7 @@
 
     <!-- Contact Section -->
     <section id="contatto" class="fade-up" style="padding-top: 8rem;">
-        <h2>Mettiamoci in Contatto</h2>
+        <h2>Mettiamoci in Contatto per il Tuo Trasloco a Milano</h2>
         <div class="contact-container">
             <div class="contact-form slide-in-left">
                 <h3>Inviaci un Messaggio</h3>
@@ -79,6 +114,7 @@
         <div class="footer-content">
             <p>&copy; 2023 Traslochi Veloci. Tutti i diritti riservati.</p>
             <p>Telefono: 02 1234 5678 | Email: info@traslochiveloci.it</p>
+            <p>Indirizzo: <a href="https://www.google.com/maps/search/Via+Esempio+123,+20100+Milano,+Italia" target="_blank">Via Esempio 123, 20100 Milano, Italia</a></p>
             <div class="social-links">
                 <a href="#">Facebook</a>
                 <a href="#">Instagram</a>
