--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traslochi Veloci - Homepage</title>
+    <title>Traslochi Veloci Milano - Servizi di Trasloco in Lombardia</title>
+    <meta name="description" content="Traslochi Veloci Milano offre servizi di trasloco professionali in Lombardia. Traslochi residenziali e aziendali con cura e professionalità. Contattaci per un preventivo gratuito.">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animations.css">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MovingCompany",
+      "name": "Traslochi Veloci Milano",
+      "description": "Servizi di trasloco professionali a Milano e in Lombardia. Traslochi residenziali e aziendali con cura e professionalità.",
+      "url": "https://traslochiveloci.it",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://traslochiveloci.it"
+      },
+      "telephone": "+390212345678",
+      "email": "info@traslochiveloci.it",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Via Esempio 123",
+        "addressLocality": "Milano",
+        "postalCode": "20100",
+        "addressRegion": "MI",
+        "addressCountry": "IT"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "45.4642",
+        "longitude": "9.1900"
+      },
+      "openingHours": "Mo-Fr 08:00-18:00, Sa 08:00-12:00",
+      "serviceArea": {
+        "@type": "Place",
+        "name": "Milano e Lombardia"
+      },
+      "priceRange": "€€"
+    }
+    </script>
 </head>
 <body>
     <!-- Header -->
@@ -13,7 +48,7 @@
         <nav>
             <div class="logo">Traslochi Veloci</div>
             <ul class="nav-menu">
-                <li><a href="#servizi">Servizi</a></li>
+                <li><a href="servizi.html">Servizi</a></li>
                 <li><a href="#chi-siamo">Chi Siamo</a></li>
                 <li><a href="#testimonianze">Testimonianze</a></li>
                 <li><a href="contattaci.html">Contattaci</a></li>
@@ -30,12 +65,12 @@
     <!-- Hero Section -->
     <section id="hero" class="fade-in">
         <div class="hero-content">
-            <h1>Il Tuo Trasloco in Mani Esperte</h1>
-            <p>Con cura, professionalità e attenzione per i tuoi ricordi più preziosi.</p>
+            <h1>Traslochi Veloci Milano - Il Tuo Trasloco in Lombardia in Mani Esperte</h1>
+            <p>I migliori servizi di traslochi a Milano e in tutta la Lombardia. Con cura, professionalità e attenzione per i tuoi ricordi più preziosi.</p>
             <a href="contattaci.html" class="cta-button">Inizia Ora</a>
         </div>
         <div class="hero-image zoom-in">
-            <img src="Immagine_Hero.jpg" alt="Traslochi Veloci - Il tuo trasloco in mani esperte">
+            <img src="Immagine_Hero.jpg" alt="Traslochi Veloci Milano - Servizi di trasloco professionale in Lombardia">
         </div>
     </section>
 
@@ -45,13 +80,13 @@
         <div class="services-grid">
             <div class="service-card slide-in-left">
                 <div class="service-icon">🏠</div>
-                <h3>Traslochi Residenziali</h3>
-                <p>Spostiamo le tue cose con la massima cura, come se fossero nostre.</p>
+                <h3>Traslochi Residenziali Milano</h3>
+                <p>Traslochi residenziali a Milano e in Lombardia con la massima cura, come se fossero nostre.</p>
             </div>
             <div class="service-card slide-in-left delay-100">
                 <div class="service-icon">🏢</div>
-                <h3>Traslochi Uffici</h3>
-                <p>Minimo disordine, massimo rispetto per il tuo lavoro.</p>
+                <h3>Traslochi Uffici Lombardia</h3>
+                <p>Traslochi aziendali a Milano e in tutta la Lombardia con minimo disordine, massimo rispetto per il tuo lavoro.</p>
             </div>
             <div class="service-card slide-in-left delay-200">
                 <div class="service-icon">🔧</div>
@@ -66,11 +101,11 @@
         <h2>Chi Siamo</h2>
         <div class="about-content">
             <div class="about-text slide-in-left">
-                <p>Da oltre 10 anni, Traslochi Veloci trasforma i traslochi in esperienze positive. Il nostro team di esperti sa quanto sia importante per te avere accanto persone di fiducia che trattano i tuoi beni con cura e rispetto.</p>
-                <p>La nostra missione è rendere ogni trasloco un nuovo inizio sereno.</p>
+                <p>Da oltre 10 anni, Traslochi Veloci Milano trasforma i traslochi in esperienze positive in Lombardia. Il nostro team di esperti traslocatori sa quanto sia importante per te avere accanto persone di fiducia che trattano i tuoi beni con cura e rispetto.</p>
+                <p>La nostra missione è rendere ogni trasloco a Milano e in Lombardia un nuovo inizio sereno.</p>
             </div>
             <div class="about-image zoom-in">
-                <img src="Chi_Siamo.jpg" alt="Il nostro team di esperti traslocatori">
+                <img src="Chi_Siamo.jpg" alt="Team Traslochi Veloci Milano - Esperti traslocatori in Lombardia">
             </div>
         </div>
     </section>
@@ -92,14 +127,14 @@
         <div class="testimonials">
             <div class="testimonial scale-in">
                 <div class="testimonial-avatar">
-                    <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=80&h=80&fit=crop&crop=face&auto=format" alt="Maria R.">
+                    <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=80&h=80&fit=crop&crop=face&auto=format" alt="Cliente soddisfatta trasloco Milano - Maria R.">
                 </div>
                 <blockquote>"Traslochi Veloci ha reso il nostro trasloco meno stressante. Tutto è arrivato integro e in tempo!"</blockquote>
                 <cite>- Maria R., Milano</cite>
             </div>
             <div class="testimonial scale-in delay-100">
                 <div class="testimonial-avatar">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=80&h=80&fit=crop&crop=face&auto=format" alt="Luca B.">
+                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=80&h=80&fit=crop&crop=face&auto=format" alt="Cliente soddisfatto trasloco Lombardia - Luca B.">
                 </div>
                 <blockquote>"Professionisti seri e gentili. Consiglio vivamente!"</blockquote>
                 <cite>- Luca B., Roma</cite>
@@ -112,6 +147,7 @@
         <div class="footer-content">
             <p>&copy; 2023 Traslochi Veloci. Tutti i diritti riservati.</p>
             <p>Telefono: 02 1234 5678 | Email: info@traslochiveloci.it</p>
+            <p>Indirizzo: <a href="https://www.google.com/maps/search/Via+Esempio+123,+20100+Milano,+Italia" target="_blank">Via Esempio 123, 20100 Milano, Italia</a></p>
             <div class="social-links">
                 <a href="#">Facebook</a>
                 <a href="#">Instagram</a>
