--- a/index.html
+++ b/index.html
@@ -1,124 +1,14 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traslochi Veloci - Homepage</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="animations.css">
-</head>
-<body>
-    <!-- Header -->
-    <header>
-        <nav>
-            <div class="logo">Traslochi Veloci</div>
-            <ul class="nav-menu">
-                <li><a href="#servizi">Servizi</a></li>
-                <li><a href="#chi-siamo">Chi Siamo</a></li>
-                <li><a href="#testimonianze">Testimonianze</a></li>
-                <li><a href="contattaci.html">Contattaci</a></li>
-            </ul>
-            <a href="contattaci.html" class="cta-button desktop-cta">Richiedi Preventivo</a>
-            <div class="mobile-menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
-    </header>
-
-    <!-- Hero Section -->
-    <section id="hero" class="fade-in">
-        <div class="hero-content">
-            <h1>Il Tuo Trasloco in Mani Esperte</h1>
-            <p>Con cura, professionalità e attenzione per i tuoi ricordi più preziosi.</p>
-            <a href="contattaci.html" class="cta-button">Inizia Ora</a>
-        </div>
-        <div class="hero-image zoom-in">
-            <img src="Immagine_Hero.jpg" alt="Traslochi Veloci - Il tuo trasloco in mani esperte">
-        </div>
-    </section>
-
-    <!-- Servizi -->
-    <section id="servizi" class="fade-up">
-        <h2>I Nostri Servizi</h2>
-        <div class="services-grid">
-            <div class="service-card slide-in-left">
-                <div class="service-icon">🏠</div>
-                <h3>Traslochi Residenziali</h3>
-                <p>Spostiamo le tue cose con la massima cura, come se fossero nostre.</p>
-            </div>
-            <div class="service-card slide-in-left delay-100">
-                <div class="service-icon">🏢</div>
-                <h3>Traslochi Uffici</h3>
-                <p>Minimo disordine, massimo rispetto per il tuo lavoro.</p>
-            </div>
-            <div class="service-card slide-in-left delay-200">
-                <div class="service-icon">🔧</div>
-                <h3>Montaggio Mobili</h3>
-                <p>Assembliamo tutto con precisione, pronti all'uso.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Chi Siamo -->
-    <section id="chi-siamo" class="fade-up">
-        <h2>Chi Siamo</h2>
-        <div class="about-content">
-            <div class="about-text slide-in-left">
-                <p>Da oltre 10 anni, Traslochi Veloci trasforma i traslochi in esperienze positive. Il nostro team di esperti sa quanto sia importante per te avere accanto persone di fiducia che trattano i tuoi beni con cura e rispetto.</p>
-                <p>La nostra missione è rendere ogni trasloco un nuovo inizio sereno.</p>
-            </div>
-            <div class="about-image zoom-in">
-                <img src="Chi_Siamo.jpg" alt="Il nostro team di esperti traslocatori">
-            </div>
-        </div>
-    </section>
-
-    <!-- Perché Sceglierci -->
-    <section id="perche-sceglierci" class="fade-up">
-        <h2>Perché Sceglierci</h2>
-        <ul>
-            <li class="slide-in-right">Esperienza decennale nel settore</li>
-            <li class="slide-in-right delay-100">Personale qualificato e affidabile</li>
-            <li class="slide-in-right delay-200">Cura dei dettagli per ogni oggetto</li>
-            <li class="slide-in-right delay-300">Prezzi trasparenti e competitivi</li>
-        </ul>
-    </section>
-
-    <!-- Testimonianze -->
-    <section id="testimonianze" class="fade-up">
-        <h2>Cosa Dicono i Nostri Clienti</h2>
-        <div class="testimonials">
-            <div class="testimonial scale-in">
-                <div class="testimonial-avatar">
-                    <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=80&h=80&fit=crop&crop=face&auto=format" alt="Maria R.">
-                </div>
-                <blockquote>"Traslochi Veloci ha reso il nostro trasloco meno stressante. Tutto è arrivato integro e in tempo!"</blockquote>
-                <cite>- Maria R., Milano</cite>
-            </div>
-            <div class="testimonial scale-in delay-100">
-                <div class="testimonial-avatar">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=80&h=80&fit=crop&crop=face&auto=format" alt="Luca B.">
-                </div>
-                <blockquote>"Professionisti seri e gentili. Consiglio vivamente!"</blockquote>
-                <cite>- Luca B., Roma</cite>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2023 Traslochi Veloci. Tutti i diritti riservati.</p>
-            <p>Telefono: 02 1234 5678 | Email: info@traslochiveloci.it</p>
-            <div class="social-links">
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-            </div>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Traslochi Veloci - Il tuo trasloco in mani esperte</title>
+    <meta name="description" content="Servizi di trasloco professionali a Milano. Traslochi residenziali, uffici e montaggio mobili con cura e professionalità." />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
